--- a/backlinks-from-quora-and-reddit.html
+++ b/backlinks-from-quora-and-reddit.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707130835"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707215204"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230707130835">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230707215204">
 
 
 
@@ -100,18 +100,18 @@
       <h1 class="hero__body-title ttitle">Backlinks from global Q&A
         — Quora & Reddit</h1>
       <p class="hero__body-p">Publishing answers to niche-related questions with a link to the site on global Q&A platforms. Average website traffic – 220millions. Average DR — 93.</p>
+      <div class="hero__picture">
+        <picture><source srcset="img/services/hero-qa.webp" type="image/webp"><img src="img/services/hero-qa.png" alt="" loading="lazy" class="img-full"></picture>
+      </div>
       <div class="hero__body-btns">
         <a href="#tarrifs2" class="hero__body-btn btn btn_green">Check packages</a>
         <a data-fancybox="" data-src="#modal_service" href="javascript://" class="hero__body-btn btn btn_border">Order Now</a>
       </div>
     </div>
-    <div class="hero__picture">
-      <picture><source srcset="img/services/hero-qa.webp" type="image/webp"><img src="img/services/hero-qa.png" alt="" loading="lazy" class="img-full"></picture>
-    </div>
   </div>
 </section>
     <section class="section">
-  <div class="section__container section__container_pb">
+  <div class="section__container section__container_pb section__container_tp">
     <h2 class="section__title section__title_tac section__title_m ttitle">Why are Quora & Reddit links <span>gets favorability?</span></h2>
     <div class="line line_qa">
       <div class="line__item">
@@ -652,9 +652,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230707130835"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230707215204"></script>
 
-<script src="js/app.min.js?_v=20230707130835"></script>
+<script src="js/app.min.js?_v=20230707215204"></script>
  
 </body>
 
