--- a/forum-backlinks.html
+++ b/forum-backlinks.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707130835"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707215204"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230707130835">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230707215204">
 
 
 
@@ -99,18 +99,18 @@
     <div class="hero__body">
       <h1 class="hero__body-title ttitle">Forum Backlinks</h1>
       <p class="hero__body-p">Our service provides high-quality forum backlinks in your niche and target location. Our main goal is a suit your requirements and fulfills linkbuilding needs.</p>
+      <div class="hero__picture">
+        <picture><source srcset="img/services/hero-fb.webp" type="image/webp"><img src="img/services/hero-fb.png" alt="" loading="lazy" class="img-full"></picture>
+      </div>
       <div class="hero__body-btns">
         <a href="#tarrifs" class="hero__body-btn btn btn_green">Check packages</a>
         <a data-fancybox="" data-src="#modal_service" href="javascript://" class="hero__body-btn btn btn_border">Order Now</a>
       </div>
     </div>
-    <div class="hero__picture">
-      <picture><source srcset="img/services/hero-fb.webp" type="image/webp"><img src="img/services/hero-fb.png" alt="" loading="lazy" class="img-full"></picture>
-    </div>
   </div>
 </section>
     <section class="section">
-  <div class="section__container">
+  <div class="section__container section__container_tp">
     <h2 class="section__title section__title_mb ttitle">Supported <span>Locations</span></h2>
     <p class="section__p">We provide backlinks in different locations and countries whenever possible.
       Forum metrics in different locations and their quantity may differ, so if you need backlinks from exotic and
@@ -882,9 +882,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230707130835"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230707215204"></script>
 
-<script src="js/app.min.js?_v=20230707130835"></script>
+<script src="js/app.min.js?_v=20230707215204"></script>
  
 </body>
 
