--- a/guest-post-backlinks.html
+++ b/guest-post-backlinks.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707130835"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707215204"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230707130835">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230707215204">
 
 
 
@@ -99,18 +99,18 @@
     <div class="hero__body">
       <h1 class="hero__body-title ttitle">Guest post backlinks</h1>
       <p class="hero__body-p">Our team places guest posts or inserts links on niche-related resources and articles. Manual and individual selection of domains for your niche and content outsourcing to experienced writers.</p>
+      <div class="hero__picture">
+        <picture><source srcset="img/services/hero-gpb.webp" type="image/webp"><img src="img/services/hero-gpb.png" alt="" loading="lazy" class="img-full"></picture>
+      </div>
       <div class="hero__body-btns">
         <a href="#pricing" class="hero__body-btn btn btn_green">Check packages</a>
         <a data-fancybox="" data-src="#modal_service" href="javascript://" class="hero__body-btn btn btn_border">Order Now</a>
       </div>
     </div>
-    <div class="hero__picture">
-      <picture><source srcset="img/services/hero-gpb.webp" type="image/webp"><img src="img/services/hero-gpb.png" alt="" loading="lazy" class="img-full"></picture>
-    </div>
   </div>
 </section>
     <section class="section">
-  <div class="section__container section__container_pb">
+  <div class="section__container section__container_pb section__container_tp">
     <h2 class="section__title section__title_mb ttitle">Guest post <span>values</span></h2>
     <div class="section__row">
       <p><b>Guest posting and niche edits services strengthen your website.</b>
@@ -721,9 +721,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230707130835"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230707215204"></script>
 
-<script src="js/app.min.js?_v=20230707130835"></script>
+<script src="js/app.min.js?_v=20230707215204"></script>
  
 </body>
 
