--- a/backlinks-from-quora-and-reddit.html
+++ b/backlinks-from-quora-and-reddit.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707215204"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230708001311"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230707215204">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230708001311">
 
 
 
@@ -101,10 +101,10 @@
         — Quora & Reddit</h1>
       <p class="hero__body-p">Publishing answers to niche-related questions with a link to the site on global Q&A platforms. Average website traffic – 220millions. Average DR — 93.</p>
       <div class="hero__picture">
-        <picture><source srcset="img/services/hero-qa.webp" type="image/webp"><img src="img/services/hero-qa.png" alt="" loading="lazy" class="img-full"></picture>
+        <img src="img/services/hero-qa.png" alt="" loading="lazy" class="img-full">
       </div>
       <div class="hero__body-btns">
-        <a href="#tarrifs2" class="hero__body-btn btn btn_green">Check packages</a>
+        <a href="#tarrifs2" class="hero__body-btn btn btn_green sm-scroll">Check packages</a>
         <a data-fancybox="" data-src="#modal_service" href="javascript://" class="hero__body-btn btn btn_border">Order Now</a>
       </div>
     </div>
@@ -166,7 +166,7 @@
           <p class="benefits__item-p p">The average answer is 500+ symbols about your niche with an organically inscribed link.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/qa-benefits1.webp" type="image/webp"><img src="img/services/qa-benefits1.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/qa-benefits1.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -175,7 +175,7 @@
           <p class="benefits__item-p p">Backlinks and answers placed only by old & boosted accounts from 10k views.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/qa-benefits2.webp" type="image/webp"><img src="img/services/qa-benefits2.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/qa-benefits2.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -184,7 +184,7 @@
           <p class="benefits__item-p p">We’ll find only real questions not created, which are related to your website niche.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/qa-benefits3.webp" type="image/webp"><img src="img/services/qa-benefits3.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/qa-benefits3.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -193,7 +193,7 @@
           <p class="benefits__item-p p">Our answers can be at the top of the questions previous. It can help you gain referral traffic..</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/qa-benefits4.webp" type="image/webp"><img src="img/services/qa-benefits4.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/qa-benefits4.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -202,7 +202,7 @@
           <p class="benefits__item-p p">Before writing answers we check your niche and are involved in your specific to write only valuable answers.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/qa-benefits5.webp" type="image/webp"><img src="img/services/qa-benefits5.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/qa-benefits5.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -211,7 +211,7 @@
           <p class="benefits__item-p p">More your answers stay in question more views it can gain during the months or years.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/qa-benefits6.webp" type="image/webp"><img src="img/services/qa-benefits6.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/qa-benefits6.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
     </div>
@@ -223,37 +223,37 @@
     <div class="samples">
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
@@ -523,21 +523,21 @@
     <form action="/" class="form">
       <div class="form__row">
         <div class="form__item">
-          <label for="name" class="form__label">First name</label>
+          <label for="" class="form__label">First name</label>
           <input type="text" name="name" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="lastname" class="form__label">Last name</label>
+          <label for="" class="form__label">Last name</label>
           <input type="text" name="lastname" class="form__input" placeholder="Law"> 
         </div>
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="email" class="form__label">Email</label>
+          <label for="" class="form__label">Email</label>
           <input type="email" name="email" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="package" class="form__label">Package</label>
+          <label for="" class="form__label">Package</label>
           <select name="package" class="form__select">
             <option value="1">Select Package</option>
             <option value="1">Test</option>
@@ -546,7 +546,7 @@
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="text" class="form__label">Additional information</label>
+          <label for="" class="form__label">Additional information</label>
           <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
         </div>
       </div>
@@ -588,7 +588,7 @@
     </div>
     <div class="form__row">
       <div class="form__item">
-        <label for="text" class="form__label">Additional information</label>
+        <label for="" class="form__label">Additional information</label>
         <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
       </div>
     </div>
@@ -624,13 +624,13 @@
       <div class="footer__top-col">
         <div class="social">
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/telegram-footer.webp" type="image/webp"><img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/facebook-footer.webp" type="image/webp"><img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/fiverr-footer.webp" type="image/webp"><img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full">
           </a>
         </div>
       </div>
@@ -652,9 +652,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230707215204"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230708001311"></script>
 
-<script src="js/app.min.js?_v=20230707215204"></script>
+<script src="js/app.min.js?_v=20230708001311"></script>
  
 </body>
 
