--- a/forum-backlinks.html
+++ b/forum-backlinks.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707215204"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230708001311"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230707215204">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230708001311">
 
 
 
@@ -100,10 +100,10 @@
       <h1 class="hero__body-title ttitle">Forum Backlinks</h1>
       <p class="hero__body-p">Our service provides high-quality forum backlinks in your niche and target location. Our main goal is a suit your requirements and fulfills linkbuilding needs.</p>
       <div class="hero__picture">
-        <picture><source srcset="img/services/hero-fb.webp" type="image/webp"><img src="img/services/hero-fb.png" alt="" loading="lazy" class="img-full"></picture>
+        <img src="img/services/hero-fb.png" alt="" loading="lazy" class="img-full">
       </div>
       <div class="hero__body-btns">
-        <a href="#tarrifs" class="hero__body-btn btn btn_green">Check packages</a>
+        <a href="#tarrifs" class="hero__body-btn btn btn_green sm-scroll">Check packages</a>
         <a data-fancybox="" data-src="#modal_service" href="javascript://" class="hero__body-btn btn btn_border">Order Now</a>
       </div>
     </div>
@@ -117,7 +117,7 @@
       specific locations, contact us and get a free consultation.</p>
     <div class="location">
       <div class="location__map">
-        <picture><source srcset="img/services/fb-location.webp" type="image/webp"><img src="img/services/fb-location.png" alt="" loading="lazy" class="img-full"></picture>
+        <img src="img/services/fb-location.png" alt="" loading="lazy" class="img-full">
       </div>
       <div class="location__body">
         <div class="location__line">
@@ -274,31 +274,31 @@
     <div class="quality">
       <div class="quality__item">
         <div class="quality__item-img">
-          <picture><source srcset="img/services/fb-quality1.webp" type="image/webp"><img src="img/services/fb-quality1.png" alt="" loading="lazy"></picture>
+          <img src="img/services/fb-quality1.png" alt="" loading="lazy">
         </div>
         <p class="quality__item-p">DR, Traffic, Ref. Domains, location</p>
       </div>
       <div class="quality__item">
         <div class="quality__item-img">
-          <picture><source srcset="img/services/fb-quality2.webp" type="image/webp"><img src="img/services/fb-quality2.png" alt="" loading="lazy"></picture>
+          <img src="img/services/fb-quality2.png" alt="" loading="lazy">
         </div>
         <p class="quality__item-p">TF, CF, Trust ratio</p>
       </div>
       <div class="quality__item">
         <div class="quality__item-img">
-          <picture><source srcset="img/services/fb-quality3.webp" type="image/webp"><img src="img/services/fb-quality3.png" alt="" loading="lazy"></picture>
+          <img src="img/services/fb-quality3.png" alt="" loading="lazy">
         </div>
         <p class="quality__item-p">DA, Spam score</p>
       </div>
       <div class="quality__item">
         <div class="quality__item-img">
-          <picture><source srcset="img/services/fb-quality4.webp" type="image/webp"><img src="img/services/fb-quality4.png" alt="" loading="lazy"></picture>
+          <img src="img/services/fb-quality4.png" alt="" loading="lazy">
         </div>
         <p class="quality__item-p">Domain rank score</p>
       </div>
       <div class="quality__item">
         <div class="quality__item-img">
-          <picture><source srcset="img/services/fb-quality5.webp" type="image/webp"><img src="img/services/fb-quality5.png" alt="" loading="lazy"></picture>
+          <img src="img/services/fb-quality5.png" alt="" loading="lazy">
         </div>
         <p class="quality__item-p">Traffic and location</p>
       </div>
@@ -460,7 +460,7 @@
             SimilarWeb and according to the location of your website. Basically, you only get targeted backlinks.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/fb-benefits1.webp" type="image/webp"><img src="img/services/fb-benefits1.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/fb-benefits1.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -471,7 +471,7 @@
             which we can find.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/fb-benefits2.webp" type="image/webp"><img src="img/services/fb-benefits2.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/fb-benefits2.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -481,7 +481,7 @@
             warranty time. Usually, if the backlink stays more than 30 days, it will stay for years.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/fb-benefits3.webp" type="image/webp"><img src="img/services/fb-benefits3.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/fb-benefits3.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -490,7 +490,7 @@
           <p class="benefits__item-p p">We can understand even without an agreement with clients what they need in case of high-quality backlinks and offer real solutions for their sites.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/fb-benefits4.webp" type="image/webp"><img src="img/services/fb-benefits4.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/fb-benefits4.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -499,7 +499,7 @@
           <p class="benefits__item-p p">If you need we can agree with you on each step of the completing project, to make it superb.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/fb-benefits5.webp" type="image/webp"><img src="img/services/fb-benefits5.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/fb-benefits5.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -508,7 +508,7 @@
           <p class="benefits__item-p p">We can place backlinks according to your site and business location, track it through Ahrefs and SimilarWeb or due to IP.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/fb-benefits6.webp" type="image/webp"><img src="img/services/fb-benefits6.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/fb-benefits6.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
     </div>
@@ -520,37 +520,37 @@
     <div class="samples">
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
@@ -753,21 +753,21 @@
     <form action="/" class="form">
       <div class="form__row">
         <div class="form__item">
-          <label for="name" class="form__label">First name</label>
+          <label for="" class="form__label">First name</label>
           <input type="text" name="name" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="lastname" class="form__label">Last name</label>
+          <label for="" class="form__label">Last name</label>
           <input type="text" name="lastname" class="form__input" placeholder="Law"> 
         </div>
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="email" class="form__label">Email</label>
+          <label for="" class="form__label">Email</label>
           <input type="email" name="email" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="package" class="form__label">Package</label>
+          <label for="" class="form__label">Package</label>
           <select name="package" class="form__select">
             <option value="1">Select Package</option>
             <option value="1">Test</option>
@@ -776,7 +776,7 @@
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="text" class="form__label">Additional information</label>
+          <label for="" class="form__label">Additional information</label>
           <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
         </div>
       </div>
@@ -818,7 +818,7 @@
     </div>
     <div class="form__row">
       <div class="form__item">
-        <label for="text" class="form__label">Additional information</label>
+        <label for="" class="form__label">Additional information</label>
         <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
       </div>
     </div>
@@ -854,13 +854,13 @@
       <div class="footer__top-col">
         <div class="social">
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/telegram-footer.webp" type="image/webp"><img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/facebook-footer.webp" type="image/webp"><img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/fiverr-footer.webp" type="image/webp"><img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full">
           </a>
         </div>
       </div>
@@ -882,9 +882,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230707215204"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230708001311"></script>
 
-<script src="js/app.min.js?_v=20230707215204"></script>
+<script src="js/app.min.js?_v=20230708001311"></script>
  
 </body>
 
