--- a/about-us.html
+++ b/about-us.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707215204"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230708001311"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230707215204">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230708001311">
 
 
 
@@ -102,7 +102,7 @@
         This’s the fundamental motto of our company. Let’s figure out more about us.</p>
     </div>
     <div class="hero__picture">
-      <picture><source srcset="img/about-us/hero-img.webp" type="image/webp"><img src="img/about-us/hero-img.png" alt="" loading="lazy" class="img-full"></picture>
+      <img src="img/about-us/hero-img.png" alt="" loading="lazy" class="img-full">
     </div>
   </div>
 </section>
@@ -236,7 +236,7 @@
             requirements. </p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item1.webp" type="image/webp"><img src="img/benefits/benefits-item1.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item1.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -246,7 +246,7 @@
             serve as third-party.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item2.webp" type="image/webp"><img src="img/benefits/benefits-item2.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item2.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -255,7 +255,7 @@
           <p class="benefits__item-p p">Provided only niche-related placements on forums without automated spam.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item3.webp" type="image/webp"><img src="img/benefits/benefits-item3.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item3.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -265,7 +265,7 @@
               1k.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item4.webp" type="image/webp"><img src="img/benefits/benefits-item4.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item4.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -274,7 +274,7 @@
           <p class="benefits__item-p p">Borem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item5.webp" type="image/webp"><img src="img/benefits/benefits-item5.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item5.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -283,7 +283,7 @@
           <p class="benefits__item-p p">Borem ipsum dolor sit amet, consectetur adipiscing elit. </p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item6.webp" type="image/webp"><img src="img/benefits/benefits-item6.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item6.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
     </div>
@@ -297,7 +297,7 @@
       <div class="swiper-wrapper">
         <div class="team__item swiper-slide">
           <div class="team__item-picture">
-            <picture><source srcset="img/about-us/team-img.webp" type="image/webp"><img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full">
           </div>
           <div class="team__item-body">
             <h4 class="team__item-title">Morem ipsum</h4>
@@ -306,7 +306,7 @@
         </div>
         <div class="team__item swiper-slide">
           <div class="team__item-picture">
-            <picture><source srcset="img/about-us/team-img.webp" type="image/webp"><img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full">
           </div>
           <div class="team__item-body">
             <h4 class="team__item-title">Morem ipsum</h4>
@@ -315,7 +315,7 @@
         </div>
         <div class="team__item swiper-slide">
           <div class="team__item-picture">
-            <picture><source srcset="img/about-us/team-img.webp" type="image/webp"><img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full">
           </div>
           <div class="team__item-body">
             <h4 class="team__item-title">Morem ipsum</h4>
@@ -324,7 +324,7 @@
         </div>
         <div class="team__item swiper-slide">
           <div class="team__item-picture">
-            <picture><source srcset="img/about-us/team-img.webp" type="image/webp"><img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full">
           </div>
           <div class="team__item-body">
             <h4 class="team__item-title">Morem ipsum</h4>
@@ -333,7 +333,7 @@
         </div>
         <div class="team__item swiper-slide">
           <div class="team__item-picture">
-            <picture><source srcset="img/about-us/team-img.webp" type="image/webp"><img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/about-us/team-img.png" alt="" loading="lazy" class="img-full">
           </div>
           <div class="team__item-body">
             <h4 class="team__item-title">Morem ipsum</h4>
@@ -371,21 +371,21 @@
     <form action="/" class="form">
       <div class="form__row">
         <div class="form__item">
-          <label for="name" class="form__label">First name</label>
+          <label for="" class="form__label">First name</label>
           <input type="text" name="name" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="lastname" class="form__label">Last name</label>
+          <label for="" class="form__label">Last name</label>
           <input type="text" name="lastname" class="form__input" placeholder="Law"> 
         </div>
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="email" class="form__label">Email</label>
+          <label for="" class="form__label">Email</label>
           <input type="email" name="email" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="package" class="form__label">Package</label>
+          <label for="" class="form__label">Package</label>
           <select name="package" class="form__select">
             <option value="1">Select Package</option>
             <option value="1">Test</option>
@@ -394,7 +394,7 @@
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="text" class="form__label">Additional information</label>
+          <label for="" class="form__label">Additional information</label>
           <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
         </div>
       </div>
@@ -436,7 +436,7 @@
     </div>
     <div class="form__row">
       <div class="form__item">
-        <label for="text" class="form__label">Additional information</label>
+        <label for="" class="form__label">Additional information</label>
         <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
       </div>
     </div>
@@ -472,13 +472,13 @@
       <div class="footer__top-col">
         <div class="social">
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/telegram-footer.webp" type="image/webp"><img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/facebook-footer.webp" type="image/webp"><img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/fiverr-footer.webp" type="image/webp"><img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full">
           </a>
         </div>
       </div>
@@ -500,9 +500,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230707215204"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230708001311"></script>
 
-<script src="js/app.min.js?_v=20230707215204"></script>
+<script src="js/app.min.js?_v=20230708001311"></script>
  
 </body>
 
