--- a/guest-post-backlinks.html
+++ b/guest-post-backlinks.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707215204"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230708001311"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230707215204">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230708001311">
 
 
 
@@ -100,10 +100,10 @@
       <h1 class="hero__body-title ttitle">Guest post backlinks</h1>
       <p class="hero__body-p">Our team places guest posts or inserts links on niche-related resources and articles. Manual and individual selection of domains for your niche and content outsourcing to experienced writers.</p>
       <div class="hero__picture">
-        <picture><source srcset="img/services/hero-gpb.webp" type="image/webp"><img src="img/services/hero-gpb.png" alt="" loading="lazy" class="img-full"></picture>
+        <img src="img/services/hero-gpb.png" alt="" loading="lazy" class="img-full">
       </div>
       <div class="hero__body-btns">
-        <a href="#pricing" class="hero__body-btn btn btn_green">Check packages</a>
+        <a href="#pricing" class="hero__body-btn btn btn_green sm-scroll">Check packages</a>
         <a data-fancybox="" data-src="#modal_service" href="javascript://" class="hero__body-btn btn btn_border">Order Now</a>
       </div>
     </div>
@@ -145,7 +145,7 @@
           <h4 class="benefits__item-title smtitle">Individual searching and selection accordingly to your niche and budget</h4>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/gpb-benefits1.webp" type="image/webp"><img src="img/services/gpb-benefits1.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/gpb-benefits1.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -153,7 +153,7 @@
           <h4 class="benefits__item-title smtitle">Increase search visibility and website metrics</h4>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/gpb-benefits2.webp" type="image/webp"><img src="img/services/gpb-benefits2.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/gpb-benefits2.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -161,7 +161,7 @@
           <h4 class="benefits__item-title smtitle">Natural and Google safe backlinks</h4>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/services/gpb-benefits3.webp" type="image/webp"><img src="img/services/gpb-benefits3.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/services/gpb-benefits3.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
     </div>
@@ -173,37 +173,37 @@
     <div class="samples">
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
@@ -441,23 +441,23 @@
   
           <div class="form__row">
             <div class="form__item">
-              <label for="name" class="form__label">Your name</label>
+              <label for="" class="form__label">Your name</label>
               <input type="text" name="name" class="form__input" placeholder="Matthew"> 
             </div>
             <div class="form__item">
-              <label for="email" class="form__label">Telegram or E-mail</label>
+              <label for="" class="form__label">Telegram or E-mail</label>
               <input type="email" name="email" class="form__input" placeholder="email.proto@gmail.com"> 
             </div>
           </div>
           <div class="form__row">
             <div class="form__item">
-              <label for="text" class="form__label">URL and Anchor Text</label>
+              <label for="" class="form__label">URL and Anchor Text</label>
               <textarea name="text" id="input" class="form__textarea" placeholder="1"></textarea>
             </div>
           </div>
           <div class="form__row">
             <div class="form__item">
-              <label for="text" class="form__label">Additional information</label>
+              <label for="" class="form__label">Additional information</label>
               <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
             </div>
           </div>
@@ -592,21 +592,21 @@
     <form action="/" class="form">
       <div class="form__row">
         <div class="form__item">
-          <label for="name" class="form__label">First name</label>
+          <label for="" class="form__label">First name</label>
           <input type="text" name="name" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="lastname" class="form__label">Last name</label>
+          <label for="" class="form__label">Last name</label>
           <input type="text" name="lastname" class="form__input" placeholder="Law"> 
         </div>
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="email" class="form__label">Email</label>
+          <label for="" class="form__label">Email</label>
           <input type="email" name="email" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="package" class="form__label">Package</label>
+          <label for="" class="form__label">Package</label>
           <select name="package" class="form__select">
             <option value="1">Select Package</option>
             <option value="1">Test</option>
@@ -615,7 +615,7 @@
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="text" class="form__label">Additional information</label>
+          <label for="" class="form__label">Additional information</label>
           <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
         </div>
       </div>
@@ -657,7 +657,7 @@
     </div>
     <div class="form__row">
       <div class="form__item">
-        <label for="text" class="form__label">Additional information</label>
+        <label for="" class="form__label">Additional information</label>
         <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
       </div>
     </div>
@@ -693,13 +693,13 @@
       <div class="footer__top-col">
         <div class="social">
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/telegram-footer.webp" type="image/webp"><img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/facebook-footer.webp" type="image/webp"><img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/fiverr-footer.webp" type="image/webp"><img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full">
           </a>
         </div>
       </div>
@@ -721,9 +721,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230707215204"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230708001311"></script>
 
-<script src="js/app.min.js?_v=20230707215204"></script>
+<script src="js/app.min.js?_v=20230708001311"></script>
  
 </body>
 
