--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707215204"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230708001311"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230707215204">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230708001311">
 
 
 
@@ -101,7 +101,7 @@
       <p class="hero__body-p hero__body-p_main">Backlinks play a significant role in the SERP ranking.
         Satisfying your linkbuilding needs is our main goal.</p>
       <div class="hero__img">
-        <picture><source srcset="img/main/hero-img.webp" type="image/webp"><img src="img/main/hero-img.png" alt="" loading="lazy" class="img-full"></picture>
+        <img src="img/main/hero-img.png" alt="" loading="lazy" class="img-full">
       </div>
       <div class="hero__body-btns">
         <a href="#" class="hero__body-btn btn btn_green">Get Started</a>
@@ -116,7 +116,7 @@
     <div class="section__body section__body_df">
       <div class="section__col">
         <div class="section__picture">
-          <picture><source srcset="img/main/main-seo.webp" type="image/webp"><img src="img/main/main-seo.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/main/main-seo.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="section__col">
@@ -182,7 +182,7 @@
             requirements. </p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item1.webp" type="image/webp"><img src="img/benefits/benefits-item1.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item1.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -192,7 +192,7 @@
             serve as third-party.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item2.webp" type="image/webp"><img src="img/benefits/benefits-item2.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item2.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -201,7 +201,7 @@
           <p class="benefits__item-p p">Provided only niche-related placements on forums without automated spam.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item3.webp" type="image/webp"><img src="img/benefits/benefits-item3.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item3.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -211,7 +211,7 @@
               1k.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item4.webp" type="image/webp"><img src="img/benefits/benefits-item4.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item4.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -220,7 +220,7 @@
           <p class="benefits__item-p p">Borem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item5.webp" type="image/webp"><img src="img/benefits/benefits-item5.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item5.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
       <div class="benefits__item">
@@ -229,7 +229,7 @@
           <p class="benefits__item-p p">Borem ipsum dolor sit amet, consectetur adipiscing elit. </p>
         </div>
         <div class="benefits__item-icon">
-          <picture><source srcset="img/benefits/benefits-item6.webp" type="image/webp"><img src="img/benefits/benefits-item6.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/benefits/benefits-item6.png" alt="" loading="lazy" class="img-full">
         </div>
       </div>
     </div>
@@ -241,37 +241,37 @@
     <div class="samples">
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
       <div class="samples__item">
         <div class="samples__item-image">
-          <picture><source srcset="img/samples/samples-item.webp" type="image/webp"><img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full"></picture>
+          <img src="img/samples/samples-item.png" alt="" loading="lazy" class="img-full">
         </div>
         <a href="#" class="samples__item-btn">Live link</a>
       </div>
@@ -567,21 +567,21 @@
     <form action="/" class="form">
       <div class="form__row">
         <div class="form__item">
-          <label for="name" class="form__label">First name</label>
+          <label for="" class="form__label">First name</label>
           <input type="text" name="name" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="lastname" class="form__label">Last name</label>
+          <label for="" class="form__label">Last name</label>
           <input type="text" name="lastname" class="form__input" placeholder="Law"> 
         </div>
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="email" class="form__label">Email</label>
+          <label for="" class="form__label">Email</label>
           <input type="email" name="email" class="form__input" placeholder="Matthew"> 
         </div>
         <div class="form__item">
-          <label for="package" class="form__label">Package</label>
+          <label for="" class="form__label">Package</label>
           <select name="package" class="form__select">
             <option value="1">Select Package</option>
             <option value="1">Test</option>
@@ -590,7 +590,7 @@
       </div>
       <div class="form__row">
         <div class="form__item">
-          <label for="text" class="form__label">Additional information</label>
+          <label for="" class="form__label">Additional information</label>
           <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
         </div>
       </div>
@@ -632,7 +632,7 @@
     </div>
     <div class="form__row">
       <div class="form__item">
-        <label for="text" class="form__label">Additional information</label>
+        <label for="" class="form__label">Additional information</label>
         <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
       </div>
     </div>
@@ -668,13 +668,13 @@
       <div class="footer__top-col">
         <div class="social">
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/telegram-footer.webp" type="image/webp"><img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/facebook-footer.webp" type="image/webp"><img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/fiverr-footer.webp" type="image/webp"><img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full">
           </a>
         </div>
       </div>
@@ -696,9 +696,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230707215204"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230708001311"></script>
 
-<script src="js/app.min.js?_v=20230707215204"></script>
+<script src="js/app.min.js?_v=20230708001311"></script>
  
 </body>
 
