--- a/seo-vocabulary-page.html
+++ b/seo-vocabulary-page.html
@@ -37,9 +37,9 @@
 		
     </script>
     	
-	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230707215204"> 
+	<link rel="stylesheet" href="css/plugins/plugins.min.css?_v=20230708001311"> 
 	
-	<link rel="stylesheet" href="css/style.min.css?_v=20230707215204">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230708001311">
 
 
 
@@ -120,7 +120,7 @@
         <div class="seo-page__content-body">
           <p>404 error – a type of error when the page has been deleted or it does not exist at the given URL.</p>
           <figure class="wp-block-image size-large">
-            <picture><source srcset="img/seo-vocabulaty.webp" type="image/webp"><img src="img/seo-vocabulaty.png" alt="" loading="lazy"></picture>
+            <img src="img/seo-vocabulaty.png" alt="" loading="lazy">
           </figure>
         </div>
         <div class="seo-page__author">
@@ -137,7 +137,7 @@
           <div class="seo-page__more-body">
             <div class="seo-page__more-item">
               <div class="seo-page__more-item_img">
-                <picture><source srcset="img/more.webp" type="image/webp"><img src="img/more.png" alt="" loading="lazy" class="img-full"></picture>
+                <img src="img/more.png" alt="" loading="lazy" class="img-full">
               </div>
               <div class="seo-page__more-item_title">
                 <h4 class="smtitle">404 Error</h4>
@@ -145,7 +145,7 @@
             </div>
             <div class="seo-page__more-item">
               <div class="seo-page__more-item_img">
-                <picture><source srcset="img/more.webp" type="image/webp"><img src="img/more.png" alt="" loading="lazy" class="img-full"></picture>
+                <img src="img/more.png" alt="" loading="lazy" class="img-full">
               </div>
               <div class="seo-page__more-item_title">
                 <h4 class="smtitle">404 Error</h4>
@@ -371,7 +371,7 @@
     </div>
     <div class="form__row">
       <div class="form__item">
-        <label for="text" class="form__label">Additional information</label>
+        <label for="" class="form__label">Additional information</label>
         <textarea name="text" id="input" class="form__textarea" placeholder="Hi! Is it possible...."></textarea>
       </div>
     </div>
@@ -407,13 +407,13 @@
       <div class="footer__top-col">
         <div class="social">
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/telegram-footer.webp" type="image/webp"><img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/telegram-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/facebook-footer.webp" type="image/webp"><img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/facebook-footer.png" alt="" loading="lazy" class="img-full">
           </a>
           <a href="#" class="social__link">
-            <picture><source srcset="img/footer/fiverr-footer.webp" type="image/webp"><img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full"></picture>
+            <img src="img/footer/fiverr-footer.png" alt="" loading="lazy" class="img-full">
           </a>
         </div>
       </div>
@@ -435,9 +435,9 @@
   
    <!-- END main page -->
 
-  <script src="js/plugins/plugins.min.js?_v=20230707215204"></script>
+  <script src="js/plugins/plugins.min.js?_v=20230708001311"></script>
 
-<script src="js/app.min.js?_v=20230707215204"></script>
+<script src="js/app.min.js?_v=20230708001311"></script>
  
 </body>
 
